glr-core/tests/fixtures/missing_index_to_symbol.stderr
error[E0063]: missing field `index_to_symbol` in initializer of `ParseTable`
  --> tests/fixtures/missing_index_to_symbol.rs:16:24
   |
16 |     let _parse_table = ParseTable {
   |                        ^^^^^^^^^^ missing `index_to_symbol`
